<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainGridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    android:useDefaultMargins="true"
    android:background="@drawable/border"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/img1ImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_marginRight="10dp"
        app:srcCompat="@drawable/img1"
        android:contentDescription="@string/img1"/>

    <ImageView
        android:id="@+id/img2ImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_marginRight="10dp"
        app:srcCompat="@drawable/img2"
        android:contentDescription="@string/img2"/>

    <ImageView
        android:id="@+id/img3ImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_row="1"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_marginRight="10dp"
        app:srcCompat="@drawable/img3"
        android:contentDescription="@string/img3"/>

    <ImageView
        android:id="@+id/img4ImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_row="1"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_marginRight="10dp"
        app:srcCompat="@drawable/img4"
        android:contentDescription="@string/img3"/>
</GridLayout>
