<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainGridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorButtonNormal"
    android:columnCount="2"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    android:useDefaultMargins="true"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tagTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:layout_rowWeight="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:gravity="center_horizontal|left|center_vertical"
        android:text="@string/tag_text"
        android:textColor="@color/btn_background" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowSpan="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:textAlignment="center"
        android:textColorHint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/findEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:ems="20"
            android:hint="@string/text_find"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_row="1"
        android:layout_marginRight="@dimen/padding"
        android:layout_columnSpan="2"
        android:layout_gravity="right|end"
        android:background="@drawable/camera"
        android:visibility="invisible"/>

    <include
        android:id="@+id/textLayout"
        layout="@layout/text_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:verticalScrollbarPosition="defaultPosition"
        android:visibility="visible" />

    <include
        android:id="@+id/photosLayout"
        layout="@layout/photo_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:verticalScrollbarPosition="defaultPosition"
        android:visibility="invisible" />

    <include
        android:id="@+id/fullScreenLayout"
        layout="@layout/fullscreen_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:verticalScrollbarPosition="defaultPosition"
        android:visibility="invisible" />

    <Button
        android:id="@+id/textButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:layout_rowWeight="0"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_gravity="bottom|fill_horizontal|left"
        android:text="@string/text_text"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/photosButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:layout_rowWeight="0"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_gravity="bottom|right|fill_horizontal"
        android:text="@string/text_photos"
        android:textColor="@android:color/background_light" />

</GridLayout>